--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>蒲池　祐太</h1>
-<p>九州産業大学　理工学部　情報科学科　1年　a組　17RS030</p>
+<p>九州産業大学　理工学部　情報科学科　3年　17RS030</p>
 
 <h2>プロフィール</h2>
 　<h3>出身</h3>
@@ -17,6 +17,7 @@
 　<h3>趣味</h3>
 <ul>
 <li>FPSゲーム（主にCOD）</li>
+<li>eスポーツARプレイヤー</li>
 <li>ゆずの曲を聴くこと(特にREASONと表裏一体）</li>
 <li>HUNTER X HUNTERの漫画・アニメを見ること</li>
 <li>ソードアート・オンラインのアニメもよく見ます</li>
