--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <ul>
 <li>FPSゲーム（主にCOD）</li>
 <li>eスポーツARプレイヤー</li>
+<li>海外のプロ勢のeスポーツ観戦</li>
 <li>ゆずの曲を聴くこと(特にREASONと表裏一体）</li>
 <li>HUNTER X HUNTERの漫画・アニメを見ること</li>
 <li>ソードアート・オンラインのアニメもよく見ます</li>
